--- a/packages/page/package.json
+++ b/packages/page/package.json
@@ -9,13 +9,13 @@
   "scripts": {},
   "dependencies": {
     "@material-ui/core": "^4.6.1",
+    "@material-ui/styles": "^4.6.0",
     "axios": "^0.19.0",
     "css-loader": "^3.2.0",
     "js-cookie": "^2.2.1",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
     "node-sass": "^4.13.0",
-    "notistack": "^0.9.6",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
