--- a/packages/page/package.json
+++ b/packages/page/package.json
@@ -13,12 +13,12 @@
     "axios": "^0.19.0",
     "css-loader": "^3.2.0",
     "js-cookie": "^2.2.1",
-    "mobx": "^5.15.0",
-    "mobx-react": "^6.1.4",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0"
   },
