--- a/packages/page/package.json
+++ b/packages/page/package.json
@@ -9,6 +9,7 @@
   "scripts": {},
   "dependencies": {
     "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.6.0",
     "axios": "^0.19.0",
     "css-loader": "^3.2.0",
