--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "npmClient": "cnpm",
+  "npmClient": "npm",
   "version": "0.0.0",
   "command": {
     "bootstrap": {
