--- a/packages/page/package.json
+++ b/packages/page/package.json
@@ -12,16 +12,13 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.6.0",
     "axios": "^0.19.0",
-    "css-loader": "^3.2.0",
     "js-cookie": "^2.2.1",
-    "node-sass": "^4.13.0",
+    "material-toast": "^1.0.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0"
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
